Complete MMM migration to Admin API
Add leaderEpoch to TopicPartitionInfo so the DescribeTopicPartitions
response (which already carries it on the wire) surfaces it through
the Admin API. This requires KIP update.

Replace all three MetadataRequest call sites in MirrorMetadataManager
with Admin API equivalents:

- discoverSourceBrokers: Admin.describeCluster()
- syncSourceTopicState: Admin.describeTopics()
- discoverTopicsByPattern: Admin.listTopics() + Admin.describeTopics()

Introduce SourceTopicInfo/SourcePartitionInfo records to decouple
processTopicMetadata, maybeStopDeletedTopics, and the epoch bump
chain from MetadataResponse types.

Remove trySendSourceClusterRequest which no longer has callers.

Initialize all admin clients lazily.

Bug fixes:

- Race: partitions stuck in UNKNOWN after onMetadataUpdate:
  onMetadataUpdate only reacts to destination metadata changes.
  If the source leader wasn't known when it first fired, the
  partition stayed in UNKNOWN forever.
  Added maybeStartMissedPartitions to transition those
  partitions on each source metadata sync.
- Newly discovered topics missing source leaders:
  discoverTopicsByPattern discovered topics and sent
  StartMirrorTopicsRequest but did not populate sourceLeaders.
  The fetcher started with a bootstrap broker, got a redirect
  it couldn't resolve, and cycled through FAILED/retry.
  Added cacheSourceLeaders to pre-populate leaders from
  the describeTopics results before the topic is created.

Signed-off-by: Federico Valeri <fedevaleri@gmail.com>